# SWE-Flow-Bench

./: .gitignore  README.md  pyproject.toml
.github/workflow/: test.yml
sweflow_bench/: main.py
sweflow_bench/utils/: data.py  docker.py  run_evaluation.py
tests/: test_data.py  test_docker_utils.py  test_run_evaluation.py
