[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=42", "wheel"]

[tool.setuptools.packages.find]
exclude = ["examples*", "results*"]
include = ["sweflow_bench*"]

[project]
authors = [{ name = "Lei Zhang", email = "jameszhang2880@gmail.com" }]
description = "Fast Remote SWE Flow"
license = { text = "MIT" }
name = "sweflow-bench"
readme = "README.md"
requires-python = ">=3.10"
version = "0.1.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = ["docker", "datasets", "pydantic"]

[project.optional-dependencies]
test = ["pytest"]

[project.scripts]
sweflow-bench-run = "sweflow_bench.main:main"
